[package]
name = "leptos_testing_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.2.5"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3.0"
web-sys = {version = "0.3.61", features = ["KeyboardEventInit", "SubmitEventInit"]}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

